rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_end.rns
.method_end ; trailing comment
.class public HelloWorld
.super java/lang/Object
